--- a/Backtracking.html
+++ b/Backtracking.html
@@ -10,13 +10,13 @@
 
 <body>
     <header>
-        <a class="logo cmse-design-focusable cmse-design-interact" href="Portfolio.html" id="logo" rel="home" >
+        <a class="logo cmse-design-focusable cmse-design-interact" href="index.html" id="logo" rel="home" >
             <img src="logo site (1).png" alt="logo" class="rond">
         </a>
         <nav id="nav-principal" class="menu-principal cmse-design-focusable cmse-design-interact nav_fermee" >
             <ul class="clearfix dropDown--close" >
                 <li class="p-accueil navigation_button_p actif">
-                    <a href="/Portfolio.html" class="navigation_link_p cmse-design-focusable actif" >
+                    <a href="/index.html" class="navigation_link_p cmse-design-focusable actif" >
                     <span>
                         Accueil </span>
                     </a>
