--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="logo cmse-design-focusable cmse-design-interact" href="index.html" id="logo" rel="home" >
             <img src="logo site (1).png" alt="logo" class="rond">
         </a>
-        <nav id="nav-principal" class="menu-principal cmse-design-focusable cmse-design-interact nav_fermee" >
+        <nav id="nav-princ  ipal" class="menu-principal cmse-design-focusable cmse-design-interact nav_fermee" >
             <ul class="clearfix dropDown--close" >
                 <li class="p-accueil navigation_button_p actif">
                     <a href="/index.html" class="navigation_link_p cmse-design-focusable actif" >
@@ -46,21 +46,21 @@
                     </article>
                 </div>
                 
-                <footer>
+                <article>
                     <h2>Compétences acquises</h2>
-                    <h3>Durant mes études, j'ai participé à des projets tous très intéressants qui m'ont apporté <br>
+                    <h3 class="normal">Durant mes études, j'ai participé à des projets tous très intéressants qui m'ont apporté <br>
                     En voici la liste :</h3><br>
-                </footer>
+                </article>
             </section>
             <article>
                 <h3>Réalisation d'un développement d'application</h3>
                 <article>
-                    <p>L'objectif : créer un jeu de Sudoku de n'importe quelle dimension de grille en langage C jouable sur terminal.</p>
+                    <p><strong>L'objectif :</strong> créer un jeu de Sudoku de n'importe quelle dimension de grille en langage C jouable sur terminal.</p>
                     <a href="sudoku.html">le code</a><br>
                     <img class="demo" src="S1.01sudoku.png" alt="sudoku">
                 </article>
                 <article>
-                    <p>L'objectif : créer un jeu de snake avec des pavées et des trous qui téléporte le serpent en langage C jouable sur terminal.</p>
+                    <p><strong>L'objectif :</strong> créer un jeu de snake avec des pavées et des trous qui téléporte le serpent en langage C jouable sur terminal.</p>
                     <a href="snake.html">le code</a><br>
                     <img class="demo" src="S1.01snake.png" alt="snake">
                 </article>
@@ -68,12 +68,12 @@
             <article>
                 <h3>Optimisation des applications informatiques</h3>
                 <article>
-                    <p>L'objectif : créer un résolveur de Sudoku à partir du programme précédemment créé.</p>
+                    <p><strong>L'objectif :</strong> créer un résolveur de Sudoku à partir du programme précédemment créé.</p>
                     <a href="Backtracking.html">le code</a><br>
                     <img class="demo" src="sae1.02.png" alt="Backtracking">
                 </article>
                 <article>
-                    <p>L'objectif : créer un snake qui va chercher ses pommes automatiquement à partir du programme de snake déjà fait précédemment</p>
+                    <p><strong>L'objectif :</strong> créer un snake qui va chercher ses pommes automatiquement à partir du programme de snake déjà fait précédemment</p>
                     <a href="autoSnake.html">le code</a><br>
                     <img class="demo" src="sae1.02snake.png" alt="snake automatique">
                 </article>
@@ -82,7 +82,7 @@
                 <article>
                     <h3>Installation d'un poste pour le développement</h3>
                     <article>
-                        <p>L'objectif : réaliser un programme qui permet de créer la documentation d'un fichier écrit en langage C, en HTML et Markdown grâce à du PHP.</p>
+                        <p><strong>L'objectif :</strong> réaliser un programme qui permet de créer la documentation d'un fichier écrit en langage C, en HTML et Markdown grâce à du PHP.</p>
                         <a href="Docker.html">explication</a><br>
                         <img class="demo" src="sae1.03.png" alt="Documentation">
                     </article>
@@ -90,7 +90,7 @@
                 <article>
                     <h3>Création d’une base de données</h3>
                     <article>
-                        <p>L'objectif : modéliser une partie du Programme National du BUT informatique en un diagramme de classe puis traduire ce diagramme de classe dans le modèle relationnel à l’aide du langage SQL.</p>
+                        <p><strong>L'objectif :</strong> modéliser une partie du Programme National du BUT informatique en un diagramme de classe puis traduire ce diagramme de classe dans le modèle relationnel à l’aide du langage SQL.</p>
                         <a href="BDD.html">explication</a><br>
                         <img class="demo" src="S1.04BDD1.png" alt="SQL">
                     </article>
@@ -100,12 +100,12 @@
                 <article>
                     <h3>Création d’un site Web</h3>
                     <article>
-                        <p>L'objectif : créer un site web par groupe de 4 pour une entreprise factice créant du contenu de streaming pour une série au choix. Notre groupe a choisi Scooby-Doo.</p>
+                        <p><strong>L'objectif :</strong> créer un site web par groupe de 4 pour une entreprise factice créant du contenu de streaming pour une série au choix. Notre groupe a choisi Scooby-Doo.</p>
                         <a href="S1.05 old/Backstage.html">ma page</a><br>
                         <img class="demo" src="S1.05scooby-doo.png" alt="HTML">
                     </article>
                     <article>
-                        <p>L'objectif : créer un site web par groupe de 4 pour les Jeux Olympics et plus présisément sur une disipline au choix.</p>
+                        <p><strong>L'objectif :</strong> créer un site web par groupe de 4 pour les Jeux Olympics et plus présisément sur une disipline au choix.</p>
                         <a href="SAE1.05/Discipline.html">ma page</a><br>
                         <img class="demo" src="S1.05volley-ball.png" alt="HTML">
                     </article>
