--- a/S1.05 old/Backstage.html
+++ b/S1.05 old/Backstage.html
@@ -16,7 +16,7 @@
             <nav>
                 <a href="lien_indisponible.html">Accueil</a>
                 <a href="lien_indisponible.html">Liste des Saisons</a>
-                <a href="backstages.html">Backstages</a>
+                <a href="Backstage.html">Backstages</a>
                 <a href="lien_indisponible.html">Critiques</a>
             </nav>
 		</header>
@@ -28,7 +28,7 @@
             <nav id="nav-phone">
                 <a class="header-link" href="lien_indisponible.html"><span class="nav-div">Accueil</span></a>
                 <a class="header-link" href="lien_indisponible.html"><span class="nav-div">Liste des saisons</span></a>
-                <a class="header-link" href="backstages.html"><span class="nav-div">Backstages</span></a>
+                <a class="header-link" href="Backstage.html"><span class="nav-div">Backstages</span></a>
                 <a class="header-link" href="lien_indisponible.html"><span class="nav-div">Critiques</span></a>
             </nav>
         </article>
