--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
         </nav>
     </header>
     <main>
+        <h3>Contact</h3>
         <ul>
             <li><a href="https://github.com/Timotheplln"><img src="" alt="">GitHub</a></li>
             <li>mon numéro : <a href="tel:0780443540">07 80 44 35 40</a></li>
