--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="margin">
         <h3>Contact</h3>
         <ul>
             <li><a href="https://github.com/Timotheplln"><img src="" alt="">GitHub</a></li>
